# module-vfs-physfs-win64

./: .gitignore  .travis.yml  README.md  bitbucket-pipelines.yml  deploy-maven-central.sh  maven-version-rules.xml  pom.xml  settings.xml
src/main/includes/: yz_physfs_system_platform.hpp
src/main/resources/: project.txt
src/main/scripts/win64/: CMakeLists.txt  build.bat  build.sh  generate-versionrc.sh  version.rc
